Completed the solution for Part 2 of Day #5